<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputResultsActivity">

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/results"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/showBetName"
        android:layout_below="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/playerName"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/first_groupRes"
        android:layout_below="@+id/showBetName"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn00"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/btn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <RadioButton
            android:id="@+id/btn02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/second_groupRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_groupRes"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="3" />

        <RadioButton
            android:id="@+id/btn04"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />

        <RadioButton
            android:id="@+id/btn05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="5" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/third_groupRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_groupRes"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn06"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6" />

        <RadioButton
            android:id="@+id/btn07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7" />

        <RadioButton
            android:id="@+id/btn08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="8" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        android:layout_below="@id/third_groupRes"
        android:onClick="onClickInputResult"
        android:text="@string/inputResult"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>