<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BetsHandsActivity"
    android:background="@drawable/background_color_bej">

    <TextView
        android:id="@+id/showBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/bet"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/showName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showBet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/playerName"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/first_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:elevation="4dp"
            android:padding="6dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="21sp" />

        <RadioButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="21sp" />

        <RadioButton
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="2"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="21sp" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/second_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_group"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="21sp"
            android:checked="false"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:elevation="4dp"
            android:layout_margin="16dp"
            android:button="@android:color/transparent"
            android:layout_weight="1"
            android:text="3" />

        <RadioButton
            android:id="@+id/btn4"
            android:padding="5dp"
            android:button="@android:color/transparent"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:textSize="21sp"
            android:checked="false"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:elevation="4dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />

        <RadioButton
            android:id="@+id/btn5"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textAlignment="center"
            android:checked="false"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:elevation="4dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:text="5" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/third_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_group"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn6"
            android:button="@android:color/transparent"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:elevation="4dp"
            android:checked="false"
            android:layout_margin="16dp"
            android:textSize="21sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="6" />

        <RadioButton
            android:id="@+id/btn7"
            android:button="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textAlignment="center"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:checked="false"
            android:elevation="4dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="7" />

        <RadioButton
            android:id="@+id/btn8"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/text_color"
            android:textSize="21sp"
            android:textAlignment="center"
            android:elevation="4dp"
            android:checked="false"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:text="8" />
    </RadioGroup>

    <Button
        android:id="@+id/setBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="onClickPlaceBet"
        android:text="@string/placeBet"
        android:textAlignment="center"
        android:textSize="24sp"
        android:background="@drawable/round_corner"/>
</RelativeLayout>